Delete em todos os itens

--- a/src/main/resources/static/cardapio.html
+++ b/src/main/resources/static/cardapio.html
@@ -71,7 +71,7 @@
                     <td>{{i.valor}}</td>
                     <td>
                         <button class="btn btn-success" ng-click="alterarItem(item)" ng-disabled="!item.nome || !item.valor">Alterar</button>
-                        <button class="btn btn-danger" ng-click="deletarItem(i)">Deletar</button>
+                        <button class="btn btn-danger" ng-click="deletarItem(i, item)">Deletar</button>
                         
                     </td>
                 </tr>
